<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BuatPesananActivity">

    <TextView
        android:id="@+id/staticRoomNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="19dp"
        android:layout_marginEnd="64dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="68dp"
        android:text="@string/text_room_number"
        app:layout_constraintBottom_toTopOf="@+id/staticTariff"
        app:layout_constraintEnd_toStartOf="@+id/room_number"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/staticTariff"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="21dp"
        android:layout_marginEnd="64dp"
        android:layout_marginStart="70dp"
        android:text="@string/text_tariff"
        app:layout_constraintBottom_toTopOf="@+id/staticDurasi"
        app:layout_constraintEnd_toStartOf="@+id/tariff"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/staticRoomNumber" />

    <TextView
        android:id="@+id/staticDurasi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="18dp"
        android:layout_marginStart="70dp"
        android:text="@string/text_durasi"
        app:layout_constraintBottom_toTopOf="@+id/staticTotal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/staticTariff" />

    <TextView
        android:id="@+id/staticTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="250dp"
        android:layout_marginStart="70dp"
        android:text="@string/text_total"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/staticDurasi" />

    <TextView
        android:id="@+id/room_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="70dp"
        app:layout_constraintBottom_toTopOf="@+id/tariff"
        app:layout_constraintStart_toEndOf="@+id/staticRoomNumber"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tariff"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="13dp"
        android:layout_marginStart="64dp"
        app:layout_constraintBottom_toTopOf="@+id/durasi_hari"
        app:layout_constraintStart_toEndOf="@+id/staticTariff"
        app:layout_constraintTop_toBottomOf="@+id/room_number" />

    <EditText
        android:id="@+id/durasi_hari"
        android:layout_width="60dp"
        android:layout_height="45dp"
        android:layout_marginStart="60dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/total_biaya"
        app:layout_constraintStart_toEndOf="@+id/staticDurasi"
        app:layout_constraintTop_toBottomOf="@+id/tariff" />

    <TextView
        android:id="@+id/total_biaya"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="67dp"
        app:layout_constraintBottom_toTopOf="@+id/hitung"
        app:layout_constraintStart_toEndOf="@+id/staticTotal"
        app:layout_constraintTop_toBottomOf="@+id/durasi_hari" />

    <Button
        android:id="@+id/hitung"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="97dp"
        android:text="@string/text_hitung"
        app:layout_constraintBottom_toTopOf="@+id/pesan"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.256"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/total_biaya" />

    <Button
        android:id="@+id/pesan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="95dp"
        android:layout_marginStart="148dp"
        android:text="@string/text_pesan"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hitung" />
</android.support.constraint.ConstraintLayout>